--- a/Selenium Learning/test-output/old/Test Suite2/classes.html
+++ b/Selenium Learning/test-output/old/Test Suite2/classes.html
@@ -12,35 +12,43 @@
 <tr>
 <td>&nbsp;</td>
 <td>moto1</td>
-<td>&nbsp;</td></tr>
+<td>Moto </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>moto2</td>
-<td>&nbsp;</td></tr>
+<td>Moto </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>lenovo1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>lenovo2</td>
-<td>&nbsp;</td></tr>
+<td>Lenovo </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>apple1</td>
-<td>&nbsp;</td></tr>
+<td>Apple </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>lenovo2</td>
+<td>Lenovo </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>vivo1</td>
-<td>&nbsp;</td></tr>
+<td>VIVO </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>vivo2</td>
-<td>&nbsp;</td></tr>
+<td>VIVO </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>apple2</td>
-<td>&nbsp;</td></tr>
+<td>Apple </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
