--- a/Selenium Learning/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium Learning/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="88d3aa">  <td>22/09/17 13:02:25</td>   <td>0</td> <td title="&lt;&lt;SuiteExample.closeBrowser()[pri:0, instance:testNGPractice.SuiteExample@769f71a9]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="88d3aa">  <td>22/09/17 13:01:58</td>   <td>-26173</td> <td title="&gt;&gt;SuiteExample.launchBrowser()[pri:0, instance:testNGPractice.SuiteExample@769f71a9]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="88d3aa">  <td>22/09/17 13:02:01</td>   <td>-23897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SuiteExample.openBing()[pri:0, instance:testNGPractice.SuiteExample@769f71a9]">openBing</td> 
+<tr bgcolor="88d3aa">  <td>22/09/18 22:20:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingExample.apple1()[pri:0, instance:testNGPractice.GroupingExample@4313f5bc]">apple1</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="88d3aa">  <td>22/09/17 13:02:03</td>   <td>-21226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SuiteExample.openGoogle()[pri:0, instance:testNGPractice.SuiteExample@769f71a9]">openGoogle</td> 
+<tr bgcolor="88d3aa">  <td>22/09/18 22:20:15</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingExample.apple2()[pri:0, instance:testNGPractice.GroupingExample@4313f5bc]">apple2</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="88d3aa">  <td>22/09/17 13:02:07</td>   <td>-17633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SuiteExample.openYahoo()[pri:0, instance:testNGPractice.SuiteExample@769f71a9]">openYahoo</td> 
+<tr bgcolor="88d3aa">  <td>22/09/18 22:20:15</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingExample.lenovo1()[pri:0, instance:testNGPractice.GroupingExample@4313f5bc]">lenovo1</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>22/09/18 22:20:15</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingExample.lenovo2()[pri:0, instance:testNGPractice.GroupingExample@4313f5bc]">lenovo2</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>22/09/18 22:20:15</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingExample.moto1()[pri:0, instance:testNGPractice.GroupingExample@4313f5bc]">moto1</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>22/09/18 22:20:15</td>   <td>55</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingExample.moto2()[pri:0, instance:testNGPractice.GroupingExample@4313f5bc]">moto2</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>22/09/18 22:20:15</td>   <td>60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingExample.vivo1()[pri:0, instance:testNGPractice.GroupingExample@4313f5bc]">vivo1</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>22/09/18 22:20:15</td>   <td>64</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingExample.vivo2()[pri:0, instance:testNGPractice.GroupingExample@4313f5bc]">vivo2</td> 
   <td>main@640070680</td>   <td></td> </tr>
 </table>
