--- a/Selenium Learning/test-output/old/index.html
+++ b/Selenium Learning/test-output/old/index.html
@@ -4,6 +4,6 @@
 </head><body>
 <h2><p align='center'>Test results</p></h2>
 <table border='1' width='100%' class='main-page'><tr><th>Suite</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>testng.xml</th></tr>
-<tr align='center' class='invocation-passed'><td><em>Total</em></td><td><em>19</em></td><td><em>0</em></td><td><em>0</em></td><td>&nbsp;</td></tr>
-<tr align='center' class='invocation-passed'><td><a href='TESt Suite/index.html'>TESt Suite</a></td>
-<td>19</td><td>0</td><td>0</td><td><a href='TESt Suite/testng.xml.html'>Link</a></td></tr></table></body></html>
+<tr align='center' class='invocation-passed'><td><em>Total</em></td><td><em>4</em></td><td><em>0</em></td><td><em>0</em></td><td>&nbsp;</td></tr>
+<tr align='center' class='invocation-passed'><td><a href='Test Suite2/index.html'>Test Suite2</a></td>
+<td>4</td><td>0</td><td>0</td><td><a href='Test Suite2/testng.xml.html'>Link</a></td></tr></table></body></html>
